--- a/day5/atm/readme
+++ b/day5/atm/readme
@@ -3,7 +3,10 @@ ATM + 购物商城程序
 角色：
      管理员
            1、创建用户
-
+                记录文件夹
+                    2016_5_22
+                    2016_6_22
+                基本信息
 
            普通用户的增删改查
                 指定最大透支额度15000或自定义
@@ -27,3 +30,5 @@ ATM：
 6. 支持多用户登陆，用户间转帐
 7. 支持多用户
 8. 管理员可添加账户、指定用户额度、冻结用户等
+
+用户名 密码 卡号 信用卡额度 本月可用额度 开户日期
