--- a/day5/atm/readme
+++ b/day5/atm/readme
@@ -1,34 +1,48 @@
-ATM + 购物商城程序
+程序功能
 
-角色：
-     管理员
-           1、创建用户
-                记录文件夹
-                    2016_5_22
-                    2016_6_22
-                基本信息
+1、购物商城
+   1）买东西加入购物车
+   2）调用信用卡接口结账
+2、信用卡中心
+   1）查询
+   2）还款
+   3）取款
+   4）转账
+   4）账单
+3、信用卡后台管理
+   1）信用卡开户
+   2）信用卡删除
+   3）信用卡冻结
+   4）信用卡解冻
+4、银行结算
+   每月22号出账单 每月10号为还款日 过期未还 按欠款总额 万分之五每日计息
 
-           普通用户的增删改查
-                指定最大透支额度15000或自定义
-     普通用户
-           可以体现 手续费5%
-           支持多账户登录
-           支持账户间转账
-           记录每月日常消费流水
-           提供还款接口
-           ATM记录操作日志
 
-实现购物商城 买东西加入购物车 调用信用卡接口结账
-每月22号出账单 每月10号为还款日 过期未还 按欠款总额 万分之五每日计息
+测试账号
 
-ATM：
-1. 指定最大透支额度15000或自定义
-2. 可取款
-3. 定期还款（每月指定日期还款，如15号）
-4. 可存款
-5. 定期出账单
-6. 支持多用户登陆，用户间转帐
-7. 支持多用户
-8. 管理员可添加账户、指定用户额度、冻结用户等
+管理员（账号 + 密码）： admin  123
 
-用户名 密码 卡号 信用卡额度 本月可用额度 开户日期
+互相转账测试
+信用卡用户A:  【卡号： 888  密码：123  用户名：lichengbing】
+信用卡用户B:  【卡号： 999  密码：123  用户名：lichengtao 】
+
+
+目录结构
+
+bin   主程序目录（4个功能程序）
+conf  配置目录（初始化用户文件路径）
+db    用户数据（每个用户卡号独立成文件夹）
+lib   公用函数库
+src   业务函数库
+
+
+主要知识
+1、重要的模块知识：logging os json re time sys shutil
+2、基础数据类型操作： 列表 字典
+3、装饰器应用
+4、函数式编程强化：独立各个功能模块
+5、程序逻辑训练
+
+
+
+
