--- a/day8/simulate_life/readme
+++ b/day8/simulate_life/readme
@@ -1,7 +1,30 @@
-1 定义三个人物，屌丝John，美女Liz，高富帅Peter。 John和Liz大学时是恋人，毕业工作后，Liz傍上了Peter
-John伤心之余决定通过自己的努力追回Liz，多年后John通过努力变身高富帅，遇到被甩的Liz，Liz向John提出复合
-John说……..（自由发挥）
+day8 模拟人生
 
-2. 定义人物信息：性别、年龄、工作、人种、国籍、特长，存款。房、车等信息
+游戏名：<诛仙Online>
 
-3. 用类实现上述故事中三者的关系和人物变化
+功能：
+1、用面向对象类功能创建玩家和NPC
+2、文字形式输出介绍主要剧情和任务
+3、玩家和NPC交互 选择不同任务分支触发不同剧情发展路线
+4、模拟游戏打怪升级
+
+目录
+[root@linux python]# tree
+├── bin
+│?? └── start_game.py   # 游戏入口文件
+├── config
+│?? └── setting.py      # 游戏设置路径文件
+├── db
+│?? └── text            # 游戏台词数据文件
+├── lib
+│?? └── module.py       # 公用类模块文件
+└── src
+    └── game.py         # 游戏主程序文件
+
+设计思路：
+创建角色 → 背景介绍 → 人物出场 → 开始游戏选择修炼技能 → 打怪升级 → 完成终极任务 → 通关
+
+知识点:
+1、面向对象 类封装 类方法
+2、configparser函数
+
