--- a/day12/readme
+++ b/day12/readme
@@ -30,3 +30,17 @@ task id: 45334
 对192.168.3.22 有root用户的权限
 对172.33.24.55 没任何权限
 分组管理，即可以对设置进行分组，允许用户访问某组机器，但对组里的不同机器依然有不同的访问权限
+
+
+收音机举例发布与订阅
+
+主播                    频道                       收听者
+服务器A
+服务器B                                            用户01
+服务器C               频道104.7
+服务器D                                            用户02
+服务器E
+
+只要主播服务器说话...
+
+收听者立马能够听到他说什么...
